--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ javafx {
 }
 
 dependencies {
+    implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
     implementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
