--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ javafx {
 
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    implementation fileTree(dir: 'lib', include: ['*.jar'])
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
